--- a/home.html
+++ b/home.html
@@ -212,7 +212,7 @@
         </form>
     </div>
 
-    <script type="text/javascript" src="q1.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
